Allow disabling 'enter to insert completion'

By default it is enabled

BUG: 480176